syntax = "proto3";
package com.sber.service;

option java_package = "com.sber.service";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

message MessageRequest {
  string hello = 1;
  google.protobuf.Timestamp time = 2;
}

message MessageResponse {
  string hello = 1;
  google.protobuf.Timestamp time = 2;
}

service GooseService {
  rpc gooseHello(MessageRequest) returns (MessageResponse);
}